syntax = "proto3";
package test;

import "google/protobuf/any.proto";
import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/auth.proto";
import "google/protobuf/timestamp.proto";

service Test {
  rpc Test (TestRequest) returns (TestResponse);
  rpc Throw (TestRequest) returns (TestResponse);
  rpc NotImplemented (TestRequest) returns (TestResponse);
  rpc NotFound (TestRequest) returns (TestResponse);
  rpc Create (TestBufferedDataList) returns (TestBufferedDataListResponse);
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (TestBufferedDataListResponse);
}

/**
* Stream test service
*/
service Stream {
  rpc BiStream (stream TestRequest) returns (stream StreamTestResponse);
  rpc ResponseStream (TestRequest) returns (stream StreamTestResponse);
  rpc RequestStream (stream TestRequest) returns (TestResponse);
}

service CRUD {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (ResourceListResponse);
  rpc Create (ResourceList) returns (ResourceListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (ResourceList) returns (ResourceListResponse);
  rpc Upsert (ResourceList) returns (ResourceListResponse);
}

message TestRequest {
  optional string value = 1;
}

message StreamTestResponse {
  optional string result = 1;
}

message TestResponse {
  optional string result = 1;
  optional io.restorecommerce.status.Status status = 4;
}

message TestEvent {
  optional string value = 1;
  optional int32 count = 2;
};

message TestBufferedData {
  optional string id = 1;
  optional io.restorecommerce.meta.Meta meta = 2;
  optional string value = 3;
  optional int32 count = 4;
  optional google.protobuf.Any data = 5;
}

message TestBufferedDataList {
  repeated TestBufferedData items = 1;
  optional uint32 total_count = 2;
}

message TestBufferedDataResponse {
  optional TestBufferedData payload = 1;
  optional io.restorecommerce.status.Status status = 2;
}

message TestBufferedDataListResponse {
  repeated TestBufferedDataResponse items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.status.OperationStatus operation_status = 3;
}

message ExtendMe {
  optional int32 bar = 126;
}

message ResourceList {
  repeated Resource items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.auth.Subject subject = 3;
}

message ResourceListResponse {
  repeated ResourceResponse items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.status.OperationStatus operation_status = 3;
}

message ResourceResponse {
  optional Resource payload = 1;
  optional io.restorecommerce.status.Status status = 2;
}

/// Example resource
message Resource {
  optional string id = 1;
  optional io.restorecommerce.meta.Meta meta = 2;
  optional int32 value = 3;
  optional string text = 4;
  optional bool active = 5;
  optional google.protobuf.Timestamp created = 6;
  optional string status = 7;
  optional google.protobuf.Any data = 8;
}
